# WSNox

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY_FIXES.md  amvera.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  start.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 10a062ee954a_initial_tables.py  15a243b7c7f7_email_auth_migration.py  3b8b4758ea0d_replace_profile_photos_with_avatar.py  7a8c9085680b_add_is_admin_and_last_seen_to_users.py  d3a8f6c1b920_add_user_blocks.py  (+19 more)
docs/: ephemeral-chats.md
nginx/: wsnox.conf  wsnox.dev.conf
scripts/: bootstrap-new-server.sh  setup-vps.sh
tests/: _helpers.py  conftest.py  test_admin_cache.py  test_admin_endpoints.py  test_albums.py  test_analytics.py  test_announcements.py  test_avatar_cache.py  test_avatar_pipeline.py  test_avatar_routes.py  test_avatar_urls.py  test_cache.py  test_cache_keys_phase5.py  test_config_infra.py  test_crypto.py  test_ephemeral.py  test_file_attachments.py  test_group_chats.py  test_identity_cache.py  test_last_seen_slot.py  test_last_seen_throttle.py  test_media_pipeline.py  test_membership_cache.py  test_permissions.py  test_presence.py  test_profile_presence.py  test_push_cache.py  test_push_dedup.py  test_push_filtering.py  test_rate_limit_auth.py  test_rate_limit_avatar.py  test_reactions.py  test_read_receipts.py  test_refresh_token.py  test_security.py  test_smoke.py  test_storage.py  test_unread_cache.py  test_unread_total.py  test_viewing_chat.py  (+2 more)
(+263 files in other folders)
