[project]
name = "messenger"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aiosmtplib (>=3.0.0,<4.0.0)",
    "pywebpush (>=2.0.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "messenger", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4.0,<1.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
fakeredis = ">=2.21.0,<3.0.0"
httpx = ">=0.27.0,<1.0.0"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "messenger.backend.app.main:app"
